Completed all tasks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@
       <button>Prev</button>
       <button>Next</button>
     </div>
-    </div id>
+    </div>
+
+    <h1>JS Doom</h1>
+
+    <!-- Task 1 -->
+    <form id="form">
+        <input id="input">
+    </form>
+
+    <div class="buttonConteiner">
+    <button id="butn">Click on me to change my name</button>
+    </div>
+
+    <div id='sliderContainer'>
+        
+        <img id='image' src="" alt="" style="background-color: black;" />
+
 
   </body>
 </html>
